...
                                <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h6s-Yy-914">
                                <rect key="frame" x="184" y="100" width="400" height="67"/>
                                <constraints>
...
                                <rect key="frame" x="184" y="207" width="400" height="510"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C0O-Th-g7a">
                                        <rect key="frame" x="0.0" y="0.0" width="400" height="50"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="password"/>
                                        </userDefinedRuntimeAttributes>
                                    </textField>
...
                                        <state key="normal" title="Login"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="login"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Start" id="JI3-iw-NvF">
                                            <connections>
                                                <action selector="startOnTap:" destination="Hmh-pE-tgE" id="avb-MG-ZAF"/>
...
                                                    <rect key="frame" x="635.5" y="9.5" width="51" height="31"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <accessibility key="accessibilityConfiguration" label="rapidToggle"/>
                                                    <connections>
                                                        <action selector="isRapidSwitchOnToggle:" destination="cuu-G9-htT" eventType="valueChanged" id="G35-S8-X5z"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                        <state key="normal" title="Classic"/>
                                        <connections>
                                            <segue destination="Hnz-Vf-gJ2" kind="show" id="GIz-Hk-xlZ"/>
...
                                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                        <state key="normal" title="Competitive"/>
                                        <connections>
                                            <segue destination="f5Z-XX-MK0" kind="presentation" modalPresentationStyle="fullScreen" id="iYR-Fz-UUn"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                <state key="normal" title="Log out"/>
                                <connections>
                                    <action selector="handleLogOutButtonTapped:" destination="TxN-r9-amb" eventType="touchUpInside" id="M4P-Qt-BX8"/>
...
                                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <state key="normal" title="Start Game"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="login"/>
...
